// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  "children": Array [],
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  "internal": Object {
    "contentDigest": "2020-06-03T14:22:37.720Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypeBlogPost",
  },
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "sys": Object {
    "contentType___NODE": "Blog Post",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:22:37.720Z",
    "id": "1dHS3UzOqupJZY7AyeDc6s",
    "locale": "en-US",
    "publishedAt": "2020-06-03T14:22:37.720Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Integration tests",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "en-US",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  "children": Array [],
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset___nl",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:22:37.720Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypeBlogPost",
  },
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "sys": Object {
    "contentType___NODE": "Blog Post",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:22:37.720Z",
    "id": "1dHS3UzOqupJZY7AyeDc6s",
    "locale": "nl",
    "publishedAt": "2020-06-03T14:22:37.720Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Integration tests",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "nl",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "en-US",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "nl",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node should update a blogpost 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrybodyTextNode",
  "children": Array [],
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___EntrydescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  "internal": Object {
    "contentDigest": "2020-06-03T14:27:24.359Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypeBlogPost",
  },
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "sys": Object {
    "contentType___NODE": "Blog Post",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:22:37.720Z",
    "id": "1dHS3UzOqupJZY7AyeDc6s",
    "locale": "en-US",
    "publishedAt": "2020-06-03T14:27:24.359Z",
    "publishedVersion": 2,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Hello world 1234",
}
`;

exports[`gatsby-node should update a blogpost 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___EntryshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "en-US",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node should update a blogpost 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "body___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nlbodyTextNode",
  "children": Array [],
  "description___NODE": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___1aaRo2sQbdfWnG8iNvnkH3___Asset___nl",
  "id": "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:27:24.359Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypeBlogPost",
  },
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "sys": Object {
    "contentType___NODE": "Blog Post",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:22:37.720Z",
    "id": "1dHS3UzOqupJZY7AyeDc6s",
    "locale": "nl",
    "publishedAt": "2020-06-03T14:27:24.359Z",
    "publishedVersion": 2,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Hello world 1234",
}
`;

exports[`gatsby-node should update a blogpost 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___31TNnjHlfaGUoMOwU0M2og___Entry___nl",
    "uzfinxahlog0___3K9b0esdy0q0yGqgW2g6Ke___Entry___nl",
    "uzfinxahlog0___2PtC9h1YqIA6kaUaIsWEQ0___Entry___nl",
    "uzfinxahlog0___1dHS3UzOqupJZY7AyeDc6s___Entry___nl",
  ],
  "children": Array [],
  "company": "ACME",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nl",
  "image___NODE": "uzfinxahlog0___7orLdboQQowIUs22KAW4U___Asset___nl",
  "internal": Object {
    "contentDigest": "2020-06-03T14:17:31.246Z",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulContentTypePerson",
  },
  "name": "John Doe",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___15jwOBqpxqSAOy2eOO4S0m___Entry___nlshortBioTextNode",
  "sys": Object {
    "contentType___NODE": "Person",
    "environmentId": "master",
    "firstPublishedAt": "2020-06-03T14:17:31.246Z",
    "id": "15jwOBqpxqSAOy2eOO4S0m",
    "locale": "nl",
    "publishedAt": "2020-06-03T14:17:31.246Z",
    "publishedVersion": 1,
    "spaceId": "uzfinxahlog0",
    "type": "Entry",
  },
  "title": "Web Developer",
  "twitter": "johndoe",
}
`;

exports[`gatsby-node stores rich text as JSON 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "This is the homepage",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 1",
        },
      ],
      "data": Object {},
      "nodeType": "heading-1",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 2",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 3",
        },
      ],
      "data": Object {},
      "nodeType": "heading-3",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 4",
        },
      ],
      "data": Object {},
      "nodeType": "heading-4",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 5",
        },
      ],
      "data": Object {},
      "nodeType": "heading-5",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 6",
        },
      ],
      "data": Object {},
      "nodeType": "heading-6",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "This is ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "bold",
            },
          ],
          "nodeType": "text",
          "value": "bold ",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "and ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "italic",
            },
          ],
          "nodeType": "text",
          "value": "italic",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": " and ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "bold",
            },
            Object {
              "type": "italic",
            },
          ],
          "nodeType": "text",
          "value": "both",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "Very",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "useful",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "list",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
      ],
      "data": Object {},
      "nodeType": "unordered-list",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "data": Object {},
              "marks": Array [],
              "nodeType": "text",
              "value": "This is a quote",
            },
          ],
          "data": Object {},
          "nodeType": "paragraph",
        },
      ],
      "data": Object {},
      "nodeType": "blockquote",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Reference tests:",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Inline Link: ",
        },
        Object {
          "content": Array [],
          "data": Object {
            "target": Object {
              "sys": Object {
                "id": "7oHxo6bs0us9wIkq27qdyK",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          },
          "nodeType": "embedded-entry-inline",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Link in list:",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "",
                },
                Object {
                  "content": Array [],
                  "data": Object {
                    "target": Object {
                      "sys": Object {
                        "id": "6KpLS2NZyB3KAvDzWf4Ukh",
                        "linkType": "Entry",
                        "type": "Link",
                      },
                    },
                  },
                  "nodeType": "embedded-entry-inline",
                },
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
      ],
      "data": Object {},
      "nodeType": "ordered-list",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Embedded Entity:",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [],
      "data": Object {
        "target": Object {
          "sys": Object {
            "id": "7oHxo6bs0us9wIkq27qdyK",
            "linkType": "Entry",
            "type": "Link",
          },
        },
      },
      "nodeType": "embedded-entry-block",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Embedded Asset:",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [],
      "data": Object {
        "target": Object {
          "sys": Object {
            "id": "4ZQrqcrTunWiuNaavhGYNT",
            "linkType": "Asset",
            "type": "Link",
          },
        },
      },
      "nodeType": "embedded-asset-block",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
  ],
  "data": Object {},
  "nodeType": "document",
}
`;

exports[`gatsby-node stores rich text as JSON 2`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "This is the homepage",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 1",
        },
      ],
      "data": Object {},
      "nodeType": "heading-1",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 2",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 3",
        },
      ],
      "data": Object {},
      "nodeType": "heading-3",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 4",
        },
      ],
      "data": Object {},
      "nodeType": "heading-4",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 5",
        },
      ],
      "data": Object {},
      "nodeType": "heading-5",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Heading 6",
        },
      ],
      "data": Object {},
      "nodeType": "heading-6",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "This is ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "bold",
            },
          ],
          "nodeType": "text",
          "value": "bold ",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "and ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "italic",
            },
          ],
          "nodeType": "text",
          "value": "italic",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": " and ",
        },
        Object {
          "data": Object {},
          "marks": Array [
            Object {
              "type": "bold",
            },
            Object {
              "type": "italic",
            },
          ],
          "nodeType": "text",
          "value": "both",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "Very",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "useful",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "list",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
      ],
      "data": Object {},
      "nodeType": "unordered-list",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "data": Object {},
              "marks": Array [],
              "nodeType": "text",
              "value": "This is a quote",
            },
          ],
          "data": Object {},
          "nodeType": "paragraph",
        },
      ],
      "data": Object {},
      "nodeType": "blockquote",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Reference tests:",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Inline Link: ",
        },
        Object {
          "content": Array [],
          "data": Object {
            "target": Object {
              "sys": Object {
                "id": "7oHxo6bs0us9wIkq27qdyK",
                "linkType": "Entry",
                "type": "Link",
              },
            },
          },
          "nodeType": "embedded-entry-inline",
        },
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Link in list:",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "",
                },
                Object {
                  "content": Array [],
                  "data": Object {
                    "target": Object {
                      "sys": Object {
                        "id": "6KpLS2NZyB3KAvDzWf4Ukh",
                        "linkType": "Entry",
                        "type": "Link",
                      },
                    },
                  },
                  "nodeType": "embedded-entry-inline",
                },
                Object {
                  "data": Object {},
                  "marks": Array [],
                  "nodeType": "text",
                  "value": "",
                },
              ],
              "data": Object {},
              "nodeType": "paragraph",
            },
          ],
          "data": Object {},
          "nodeType": "list-item",
        },
      ],
      "data": Object {},
      "nodeType": "ordered-list",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Embedded Entity:",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [],
      "data": Object {
        "target": Object {
          "sys": Object {
            "id": "7oHxo6bs0us9wIkq27qdyK",
            "linkType": "Entry",
            "type": "Link",
          },
        },
      },
      "nodeType": "embedded-entry-block",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "Embedded Asset:",
        },
      ],
      "data": Object {},
      "nodeType": "heading-2",
    },
    Object {
      "content": Array [],
      "data": Object {
        "target": Object {
          "sys": Object {
            "id": "4ZQrqcrTunWiuNaavhGYNT",
            "linkType": "Asset",
            "type": "Link",
          },
        },
      },
      "nodeType": "embedded-asset-block",
    },
    Object {
      "content": Array [
        Object {
          "data": Object {},
          "marks": Array [],
          "nodeType": "text",
          "value": "",
        },
      ],
      "data": Object {},
      "nodeType": "paragraph",
    },
  ],
  "data": Object {},
  "nodeType": "document",
}
`;
